--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,40 @@
 /* You can add global styles to this file, and also import other style files */
+
+body{
+  background: darkslategray;
+  color: white;
+  font-family:sans-serif;
+  text-shadow: 2px 2px 4px #000000;
+}
+
+
+h1{
+  text-align: center;
+  font-size: 60px;
+  margin-left: 200px;
+  margin-right: 200px;
+  padding-top:20px;
+  padding-bottom:20px;
+  border-radius: 8px;
+}
+
+
+
+img {
+  border: 4px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  height: 300px;
+}
+
+
+.inLine{
+
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.celulas{
+  margin-top: 30px;
+  }
